--- a/lesson_ssr_ssg/package.json
+++ b/lesson_ssr_ssg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson_ssr_ssg",
+  "name": "lesson_02_use_effect",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "autoprefixer": "10.4.16",
+    "moment": "^2.29.4",
+    "next": "13.5.2",
+    "postcss": "8.4.30",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "tailwindcss": "3.3.3"
   }
 }
